--- a/style.css
+++ b/style.css
@@ -6,9 +6,24 @@ body {
     background-image: url(Images/fon.jpg);
     background-size: inherit
 }
+.start{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 h1 {
 color: white;
 font-size: 80px;
 text-align: center;
 padding-top: 100px;
+}
+div > img {
+    border-radius: 50%;
+    width: 300px;
+padding-top: 200px;
+}
+div > p {
+    color: white;
+    font-size: 25px;
+    text-align: center;
 }
