--- a/style.css
+++ b/style.css
@@ -6,6 +6,33 @@ body {
     background-image: url(Images/fon.jpg);
     background-size: inherit
 }
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 1280px;
+    background-color: white;
+    text-align: center;
+}
+.git {
+    border-style: none;
+}
+header > div > a {
+    text-decoration: none;
+    color: black;
+padding-right: 25px;
+padding-left: 25px;
+border-style: solid;
+border-width: 3px;
+border-radius: 10px;
+}
+
+.profile {
+    padding: 0;
+    border-radius: 0;
+    background-color: rgb(255, 255, 255);
+    width: 100px;
+}
 .start{
     display: flex;
     align-items: center;
