--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
     width: auto;
     background-color: white;
     text-align: center;
+    
 }
 .git {
     border-style: none;
@@ -48,8 +49,8 @@ text-align: center;
 padding-top: 100px;
 }
 div > img {
-    border-radius: 50%;
-    width: 300px;
+border-radius: 50%;
+width: 300px;
 padding-top: 200px;
 padding-left: 20px;
 }
@@ -57,4 +58,14 @@ div > p {
     color: white;
     font-size: 25px;
     text-align: center;
+}
+.AboutMe {
+    padding-top: 300px;
+}
+.bg-clr {
+    background-color: rgb(10,10,10);
+    width: auto;
+}
+.bg-clr > p {
+    font-size: 10px;
 }
