--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ header {
     width: auto;
     background-color: white;
     text-align: center;
-    
 }
 .git {
     border-style: none;
@@ -54,18 +53,35 @@ width: 300px;
 padding-top: 200px;
 padding-left: 20px;
 }
-div > p {
+.start > div > p {
     color: white;
     font-size: 25px;
     text-align: center;
 }
 .AboutMe {
-    padding-top: 300px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 300px;
+    background-color: white;
+}
+.AboutMe > div > img {
+    width: 200px;
+    margin-top: -200px;
+}
+.AboutMe > div > p {
+    color: black;
+    font-size: 25px;
 }
 .bg-clr {
     background-color: rgb(10,10,10);
     width: auto;
+    height: 400px;
 }
 .bg-clr > p {
     font-size: 10px;
+}
+
+.AboutMe-Info > p {
+    font-size: 25px;
+    color: white;
 }
