--- a/style.css
+++ b/style.css
@@ -71,17 +71,29 @@ padding-left: 20px;
 .AboutMe > div > p {
     color: black;
     font-size: 25px;
+    padding-top: 5px;
 }
 .bg-clr {
     background-color: rgb(10,10,10);
     width: auto;
-    height: 400px;
+    height: 800px;
 }
 .bg-clr > p {
     font-size: 10px;
 }
+.AboutMe-Info {
 
-.AboutMe-Info > p {
+}
+.AboutMe-Info > div> p {
     font-size: 25px;
     color: white;
 }
+.Lang-imgs {
+    display: flex;
+}
+.Language > img {
+padding-top: 20px;
+    border-radius: 0%;
+    background-color: ;
+}
+
