--- a/style.css
+++ b/style.css
@@ -91,7 +91,43 @@ padding-left: 20px;
 .Language > img {
     padding-left: 50px;
     width: 250px;
-padding-top: 20px;
+padding-top: 40px;
 border-radius: 0%;
+}
+.MyProjects {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    background-color: white;
+}
+.MyProjects > div > img {
+    width: 200px;
+    margin-top: -200px;
+}
+.MyProjects > div > p {
+    color: black;
+    font-size: 25px;
+    padding-top: 5px;
+}
+.bg-clr {
+    background-color: rgb(10,10,10);
+    width: auto;
+    height: 600px;
+}
+.bg-clr > p {
+    font-size: 10px;
+}
+.MyProjects-Info > div > div {
+    padding-top: 30px;
+}
+
+.MyProjects-Info > div > div > a {
+    text-decoration: none;
+    color: white;
+    font-size: 40px;
+}
+.MyProjects-Info > div > p {
+    font-size: 25px;
+    color: white;
 }
 
