--- a/style.css
+++ b/style.css
@@ -118,16 +118,41 @@ border-radius: 0%;
     font-size: 10px;
 }
 .MyProjects-Info > div > div {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
     padding-top: 30px;
 }
 
-.MyProjects-Info > div > div > a {
+.MyProjects-Info > div > div > div > a {
     text-decoration: none;
     color: white;
     font-size: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    border-width: 1px;
+    border-color: white;
+    border-style: solid;
 }
 .MyProjects-Info > div > p {
     font-size: 25px;
     color: white;
 }
+.Footer {
+    display: flex;
+    margin-top: 50px;
+    background-color: white;
+    width: auto;
+    height: 50px;
+    align-items: center;
+}
+.Footer > div > a {
+    display: flex;
+    align-items: center;
+}
+.Footer > div > a > img {
 
+    padding: 0px;
+    width: 70px;
+}
